--- a/ui.frontend/src/app/components/header/header.component.scss
+++ b/ui.frontend/src/app/components/header/header.component.scss
@@ -1,5 +1,80 @@
 header {
     display: flex;
+    justify-content: space-around;
     width: 100%;
-    background-color: red
+    height: 100px;
+    background-image: linear-gradient(0deg, rgba(216, 28, 10, 0.3) 0%,rgba(255, 189, 248, 0.3) 100%),linear-gradient(90deg, rgb(208, 18, 218),rgb(197, 126, 179));
 }
+
+img {
+    width: 100%;
+    height: 100%;
+}
+
+.structure__menu {
+    display: flex;
+    align-items: center;
+    ul {
+        display: flex;
+        flex-direction: row;
+        gap: 20px;
+    }
+   li {
+    list-style: none;
+   }
+   a {
+    color: white;
+    text-decoration: none;
+    position: relative;
+   }
+   a:hover {
+    text-decoration: none;
+    color: #68e4e6;
+   }
+   a:hover::after {
+    text-decoration: line-through;
+    content: ''; 
+    display: block; 
+    position: absolute; 
+    bottom: -2px;
+    left: 0; 
+    width: 100%; 
+    height: 2px; 
+    background-color: #68e4e6; 
+   }
+}
+
+.structure__button{
+    font-size: 14px;
+    display: flex;
+    align-items: center;
+    margin-left: 20px;
+    button {
+        box-shadow: 0px 0px 0px 2px #276873;
+        font-size: 14px;
+        background:linear-gradient(to bottom, #599bb3 5%, #408c99 100%);
+        background-color:#599bb3;
+        border-radius:10px;
+        border:1px solid #29668f;
+        display:inline-block;
+        cursor:pointer;
+        color:#ffffff;
+        font-family:Arial;
+        font-size:19px;
+        padding:12px 37px;
+        text-decoration:none;
+        text-shadow:0px 1px 0px #3d768a;
+        padding-left: 13px;
+        padding-right: 13px;
+
+    }
+    button:hover {
+        background:linear-gradient(to bottom, #408c99 5%, #599bb3 100%);
+	    background-color:#408c99;
+    }
+    button:active {
+        position:relative;
+	    top:1px;
+    }
+}
+
