Componente header java

--- a/ui.frontend/src/app/components/header/header.component.html
+++ b/ui.frontend/src/app/components/header/header.component.html
@@ -12,8 +12,10 @@
     </nav>
   </div>
   <div class="structure__button">
-    <button>
-      {{ buttonLink }}
-    </button>
+    <a target="_blank" [href]="buttonLink">
+      <button>
+        {{ buttonText }}
+      </button>
+    </a>
   </div>
 </header>
