--- a/ui.frontend/src/app/components/header/header.component.scss
+++ b/ui.frontend/src/app/components/header/header.component.scss
@@ -3,7 +3,7 @@ header {
     justify-content: space-around;
     width: 100%;
     height: 100px;
-    background-image: linear-gradient(0deg, rgba(216, 28, 10, 0.3) 0%,rgba(255, 189, 248, 0.3) 100%),linear-gradient(90deg, rgb(208, 18, 218),rgb(197, 126, 179));
+    background-image: linear-gradient(0deg, rgba(216, 28, 10, 0.3) 0%,rgba(255, 189, 248, 0.3) 100%),linear-gradient(90deg, rgba(255, 119, 139,1),rgb(197, 126, 179));
 }
 
 img {
